--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
+#----------------------------------- 0.15 ------------------------------------
+[fixed] Thanks to https://github.com/MickeyKim who fixed Json columns so that
+    they round-trip after multiple saves.
 #----------------------------------- 0.14 ------------------------------------
 [fixed] Thanks to https://github.com/mayfield the manifest is fixed for the
-    source installation
+    source installation.
 #----------------------------------- 0.13 ------------------------------------
 [fixed] updating a model will no longer unindex the model on attributes that
     weren't updated. Thanks to https://github.com/mayfield for the bug report,
