--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+#----------------------------------- 0.21 ------------------------------------
+[fixed] upload for rom 0.20 was missing new columns.py, now fixed
 #----------------------------------- 0.20 ------------------------------------
 [changed] Added exception when performing .all(), .execute(), or .count() on
     query objects that have had no filters or attribute ordering provided.
