--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+#----------------------------------- 0.22 ------------------------------------
+[fixed] size estimation for intersection ordering when filtering has now been
+    fixed, thank you to https://github.com/MickeyKim for the report and the
+    change (should improve performance).
+[fixed] an issue with some types when trying to update attributes has now been
+    fixed, thank you to https://github.com/denisvolokh for the report.
+[changed] improved performance for simple numeric range queries of the form
+    Model.get_by(attr=value) or Model.get_by(attr=(min, max)) by roughly a
+    factor of 60x or better in some cases. Thank you to
+    https://github.com/MickeyKim for the report on poor performance.
 #----------------------------------- 0.21 ------------------------------------
 [fixed] upload for rom 0.20 was missing new columns.py, now fixed
 #----------------------------------- 0.20 ------------------------------------
