Fix for prefix/suffix index when using SIMPLE or CASE_INSENSITIVE keygen functions

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
+#---------------------------------- 0.30.1 -----------------------------------
 [updated] Copyright year, development status, Python version compatability,
     and stopped installing the test package as part of installation.
 [fixed] Tests for Python 2.6 .
+[fixed] Issue with prefix/suffix indexes on string columns using the new
+    SIMPLE and CASE_INSENSITIVE keygen functions
 #---------------------------------- 0.30.0 -----------------------------------
 [fixed] a double-delete issue with setting a column/attribute to None when the
     column/attribute was already empty/None. Thanks to Github user
