--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,20 @@
+#---------------------------------- 0.31.0 -----------------------------------
+[fixed] an issue with the docs not generating 20+ notes and warnings from the
+    source code
+[changed] moved on_delete action from OneToMany to ManyToOne, where it belongs
+[added] OneToOne column with on_delete functionality, thanks to github user
+    https://github.com/jmmills for the feature request
+[changed] on_delete reference scanning now based ManyToOne/OneToOne
+    relationships, ensuring that references are now always handled as part of
+    on_delete processing
+[added] missing 'String' column for Python 3.x, which is really just a bytes
+    column that shares its name with the 2.x String column
+[updated] and clarified documentation relating to column arguments and for
+    String, Text, ManyToOne, OneToMany, and OneToOne columns
+[added] on_delete 'set null' and 'set default' options for ManyToOne and
+    OneToOne columns
+[added] OneToMany columns can be used to reference the reverse of a OneToOne
+    relationship column
 #---------------------------------- 0.30.1 -----------------------------------
 [updated] Copyright year, development status, Python version compatability,
     and stopped installing the test package as part of installation.
