--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+#---------------------------------- 0.31.3 -----------------------------------
+[added] a _connection property to all Models to be able to fetch the
+    connection that would be used to read or write data for the model. Thanks
+    to https://github.com/jmmills for the feature request
 #---------------------------------- 0.31.2 -----------------------------------
 [fixed] more bugs with String (bytes) columns in rom for Python 3.x
 #---------------------------------- 0.31.1 -----------------------------------
