--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+
+[added] test for recursive ManyToOne/OneToMany relationships, information:
+    https://github.com/josiahcarlson/rom/issues/78#issuecomment-249451280
+[added] docs for index types and their semantics, information available in the
+    documentation for `rom.column`:
+    https://pythonhosted.org/rom/rom.html#rom.Column
 #---------------------------------- 0.37.2 -----------------------------------
 [fixed] make sure that index data is valid before writing. Bug report and PR
     thanks to Github user https://github.com/LuisUrrutia
